--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MINI PROJECT</title>
 
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="css/" />
   </head>
   <body>
     <!-- HEADER/NAVBAR -->
