--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MINI PROJECT</title>
 
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- HEADER/NAVBAR -->
@@ -14,7 +14,7 @@
         <nav>
           <!-- pembungkus logo -->
           <div class="logo">
-            <img src="assets/" alt="" />
+            <img src="assets/ahmad logo.png" alt="" />
           </div>
           <!-- pembungkus home, contact us, dan our packages -->
           <ul class="bar">
